--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {},
@@ -15,6 +16,7 @@
     "@nrwl/workspace": "15.0.0",
     "nx": "15.0.0",
     "prettier": "^2.6.2",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "husky": "^8.0.0"
   }
 }
