--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@nrwl/cli": "15.0.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.0",
+    "husky": "^8.0.0",
     "nx": "15.0.0",
     "prettier": "^2.6.2",
-    "typescript": "~4.8.2",
-    "husky": "^8.0.0"
+    "typescript": "~4.8.2"
   }
 }
