--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.0",
     "husky": "^8.0.0",
+    "lint-staged": "^13.0.3",
     "nx": "15.0.0",
     "prettier": "^2.6.2",
+    "prettier-plugin-sh": "^0.12.8",
     "typescript": "~4.8.2"
   }
 }
