--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "prepare": "husky install"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@docusaurus/core": "^2.1.0",
+    "@docusaurus/preset-classic": "^2.1.0",
+    "@mdx-js/react": "^1.6.21",
+    "clsx": "^1.1.1",
+    "prism-react-renderer": "^1.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@docusaurus/module-type-aliases": "^2.1.0",
     "@nrwl/cli": "15.0.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.0",
+    "@nx-plus/docusaurus": "^14.1.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "nx": "15.0.0",
