--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.0",
     "@nx-plus/docusaurus": "^14.1.0",
+    "gh-pages": "^4.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "nx": "15.0.0",
