--- a/package.json
+++ b/package.json
@@ -13,25 +13,46 @@
     "@docusaurus/core": "^2.1.0",
     "@docusaurus/preset-classic": "^2.1.0",
     "@mdx-js/react": "^1.6.21",
+    "@swc/helpers": "~0.4.11",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tslib": "^2.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@docusaurus/module-type-aliases": "^2.1.0",
     "@nrwl/cli": "15.0.0",
+    "@nrwl/eslint-plugin-nx": "15.0.0",
+    "@nrwl/jest": "15.0.0",
+    "@nrwl/js": "15.0.0",
+    "@nrwl/linter": "15.0.0",
     "@nrwl/nx-cloud": "^15.0.0",
     "@nrwl/workspace": "15.0.0",
     "@nx-plus/docusaurus": "^14.1.0",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.2.173",
+    "@swc/jest": "0.2.20",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
     "gh-pages": "^4.0.0",
     "husky": "^8.0.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "lint-staged": "^13.0.3",
     "nx": "15.0.0",
     "prettier": "^2.6.2",
     "prettier-plugin-sh": "^0.12.8",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
     "typescript": "~4.8.2"
   },
   "volta": {
