--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@last-oms-app/api/domain/order": ["libs/api/domain/order/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
