--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tslib": "^2.3.0",
+    "type-fest": "^3.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
