--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@docusaurus/module-type-aliases": "^2.1.0",
     "@nrwl/cli": "15.0.0",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^15.0.0",
     "@nrwl/workspace": "15.0.0",
     "@nx-plus/docusaurus": "^14.1.0",
     "gh-pages": "^4.0.0",
