--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@docusaurus/module-type-aliases": "^2.1.0",
-    "@nrwl/cli": "15.0.0",
-    "@nrwl/eslint-plugin-nx": "15.0.0",
-    "@nrwl/jest": "15.0.0",
-    "@nrwl/js": "15.0.0",
-    "@nrwl/linter": "15.0.0",
-    "@nrwl/nx-cloud": "^15.0.0",
-    "@nrwl/workspace": "15.0.0",
+    "@nrwl/cli": "15.0.4",
+    "@nrwl/eslint-plugin-nx": "15.0.4",
+    "@nrwl/jest": "15.0.4",
+    "@nrwl/js": "15.0.4",
+    "@nrwl/linter": "15.0.4",
+    "@nrwl/nx-cloud": "15.0.0",
+    "@nrwl/workspace": "15.0.4",
     "@nx-plus/docusaurus": "^14.1.0",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
@@ -49,7 +49,7 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "lint-staged": "^13.0.3",
-    "nx": "15.0.0",
+    "nx": "15.0.4",
     "prettier": "^2.6.2",
     "prettier-plugin-sh": "^0.12.8",
     "ts-jest": "28.0.5",
